--- a/ResturantManagementSystem/src/system/BookingForm.form
+++ b/ResturantManagementSystem/src/system/BookingForm.form
@@ -258,6 +258,11 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="textCustomerNum">
+              <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="f0" green="f0" red="f0" type="rgb"/>
+                </Property>
+              </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textCustomerNumActionPerformed"/>
               </Events>
@@ -266,6 +271,11 @@
               </AuxValues>
             </Component>
             <Component class="javax.swing.JTextField" name="textEmp">
+              <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="f0" green="f0" red="f0" type="rgb"/>
+                </Property>
+              </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textEmpActionPerformed"/>
               </Events>
@@ -289,6 +299,11 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="textTable">
+              <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="f0" green="f0" red="f0" type="rgb"/>
+                </Property>
+              </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textTableActionPerformed"/>
               </Events>
@@ -318,6 +333,11 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="textCustomerName">
+              <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="f0" green="f0" red="f0" type="rgb"/>
+                </Property>
+              </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textCustomerNameActionPerformed"/>
               </Events>
